--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,6 @@ jobs:
       - name: Install
         run: npm ci
       - name: Test
+        env:
+          PORT: ${{secrets.PORT}}
         run: npm run test
-        
